# timesheet-server

./: .env  .gitignore  Cargo.toml  package.json
src/: main.rs
src/partials/: footer.html  head.html  navigation.html
src/routes/: 404.html  index.html  timesheet.html
src/styles/: styles.scss
