[package]
name = "timesheet-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "3"
actix-files = "0.5.0"
env_logger = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
mongodb = { version = "1.2.0" }
futures = "0.3"
handlebars = { version = "3.0.0", features = ["dir_source"] }
